hotfix: fix UTF-8 encoder usage to in CWAReader